--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 * {
 	box-sizing:border-box;
 	font-family: Ubuntu;
-    background-color: #AB9D90;
+    background-color: #333333;
 }
 
 /* Slideshow container */
@@ -12,8 +12,9 @@
 }
 
 /* Hide the images by default */
-.mySlides {
+.slides {
   display: none;
+  margin-top: 30px;
 }
 
 /* Next & previous buttons */
@@ -39,9 +40,32 @@
   border-radius: 3px 0 0 3px;
 }
 
+/* Position the "next button" to the right */
+.av-thin {
+	width: 90%;
+	color: #ffffff;
+	background-color: #555555;
+    position: relative;
+	margin: 0 auto!important;
+	height: 100%;
+}
+
+p, h1 {
+	color: #ffffff;
+	background-color: #555555;
+	padding-left: 80px;
+	font-family: Ubuntu;
+}
+
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.2);
+}
+
+/* Slideshow container */
+.aeroventures-title {
+  text-align: center;
+  font-size: 40px;
 }
 
 /* Number text (1/3 etc) */
@@ -54,6 +78,26 @@
   background-color: rgba(0,0,0,0.1);
 }
 
+.aero-blue {
+	color: #fff!important;
+	background-color: #46BCE3!important;
+}
+
+.aero-dblue {
+	color: #fff!important;
+	background-color: #3794B3!important;
+}
+
+.pon-pink {
+	color: #fff!important;
+	background-color: #ED7CB1!important;
+}
+
+.nyork-green {
+	color: #fff!important;
+	background-color: #7bec37!important;
+}
+
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
@@ -63,12 +107,12 @@
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4}
+  from {opacity: 1}
   to {opacity: 1}
 }
 
 @keyframes fade {
-  from {opacity: .4}
+  from {opacity: 1}
   to {opacity: 1}
 }
 
