--- a/index.css
+++ b/index.css
@@ -4,20 +4,18 @@
     background-color: #333333;
 }
 
-/* Slideshow container */
 .slideshow-container {
   max-width: 500px;
   position: relative;
   margin: auto;
+  background-color: #555555;
 }
 
-/* Hide the images by default */
 .slides {
   display: none;
   margin-top: 30px;
 }
 
-/* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
   position: absolute;
@@ -34,7 +32,6 @@
   user-select: none;
 }
 
-/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
@@ -50,31 +47,44 @@
 	height: 100%;
 }
 
-p, h1 {
+p, h1, h2 {
 	color: #ffffff;
 	background-color: #555555;
 	padding-left: 80px;
 	font-family: Ubuntu;
 }
 
-/* On hover, add a black background color with a little bit see-through */
+a {
+	text-decoration: none;
+}
+
+.description {
+	text-align: center;
+	font-family: Ubuntu;
+	background-color: #555555;
+	color: #ffffff;
+}
+
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.2);
 }
 
-/* Slideshow container */
 .aeroventures-title {
   text-align: center;
   font-size: 40px;
 }
 
-/* Number text (1/3 etc) */
+.comic-title {
+  text-align: center;
+  font-size: 30px;
+  background-color: #555555;
+}
+
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
-  top: 0;
   background-color: rgba(0,0,0,0.1);
 }
 
@@ -98,7 +108,6 @@ p, h1 {
 	background-color: #7bec37!important;
 }
 
-/* Fading animation */
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
@@ -122,4 +131,43 @@ p, h1 {
   top: 50%;
   width: 8em;
   margin-top: -2.5em;
+}
+
+.infobox {
+	border: 1px solid #ffffff;
+	border-spacing: 3px;
+	background-color: #555555;
+	color: white;
+	margin: 0.5em 0 0.5em 1em;
+	padding: 0.2em;
+	float: right;
+	clear: right;
+	font-size: 88%;
+	line-height: 1.5em;
+	left: 150px;
+}
+
+.infobox caption {
+	border: 1px solid #ffffff;
+	border-spacing: 3px;
+	font-size: 125%;
+	font-weight: bold;
+	padding: 0.2em;
+	text-align: center;
+}
+
+.infobox img, td {
+	background-color: #555555;
+}
+
+.n {
+	color: #ff0000;
+}
+
+.y {
+	color: #6EC7E7;
+}
+
+ul {
+    list-style-type: none;
 }
