--- a/index.css
+++ b/index.css
@@ -18,24 +18,25 @@
 
 .prev,
 .next {
+	left: 0;
 	cursor: pointer;
 	position: absolute;
-	top: 50%;
 	width: auto;
-	margin-top: -22px;
 	padding: 16px;
 	background-color: rgba(0, 0, 0, 0.1);
 	color: #FFFFFF;
 	font-weight: bold;
 	font-size: 18px;
 	transition: 0.6s ease;
-	border-radius: 0 3px 3px 0;
 	user-select: none;
+	float: left;
 }
 
 .next {
+	left: auto;
 	right: 0;
 	border-radius: 3px 0 0 3px;
+	float: right;
 }
 
 .av-thin {
@@ -98,6 +99,7 @@ a {
 	padding: 8px 12px;
 	position: absolute;
 	background-color: rgba(0, 0, 0, 0.1);
+	margin-top: -2.9em;
 }
 
 .aero-blue {
