--- a/index.css
+++ b/index.css
@@ -142,7 +142,7 @@ a {
 	border-spacing: 3px;
 	background-color: #555555;
 	color: white;
-	margin: 0.5em 0 0.5em 1em;
+	margin: 0.5em 1em 0.5em 1em;
 	padding: 0.2em;
 	float: right;
 	clear: right;
