--- a/index.css
+++ b/index.css
@@ -46,6 +46,7 @@
 	position: relative;
 	margin: 0 auto !important;
 	height: 100%;
+	border-radius: 0 0 1em 1em;
 }
 
 p,
@@ -166,7 +167,7 @@ a {
 	box-sizing: border-box;
 	background-color: #555555;
 	color: white;
-	margin: 1em auto 0;
+	margin: 1em auto 1em;
 	padding: 1px;
 	clear: both;
 	font-size: 88%;
@@ -427,7 +428,9 @@ html,
 body {
 	font-family: Verdana, sans-serif;
 	font-size: 15px;
-	line-height: 1.5
+	line-height: 1.5;
+	height: 100%;
+	display: grid;
 }
 
 html {
