--- a/index.css
+++ b/index.css
@@ -3,6 +3,56 @@
 	src: url(ubuntu.woff2);
 }
 
+.rainbow {
+	animation: rainbow 1s linear infinite;
+}
+
+@keyframes rainbow{
+	0%{
+		color: orange;
+	}	
+	
+	10%{
+		color: purple;
+	}	
+	
+	20%{
+		color: red;
+	}
+	
+	30%{
+		color: CadetBlue;
+	}
+	
+	40%{
+		color: yellow;
+	}
+	
+	50%{
+		color: coral;
+	}
+	
+	60%{
+		color: green;
+	}
+	
+	70%{
+		color: cyan;
+	}
+	
+	80%{
+		color: DeepPink;
+	}
+	
+	90%{
+		color: DodgerBlue;
+	}
+	
+	100% {
+		color: orange;
+	}
+}
+
 * {
 	box-sizing: border-box;
 	font-family: Ubuntu;
@@ -77,6 +127,10 @@ h4 {
 	font-family: Ubuntu !important;
 	line-height: 0.9em;
 	margin: 0;
+}
+
+span {
+	background-color: rgba(0, 0, 0, 0);
 }
 
 a {
