--- a/index.css
+++ b/index.css
@@ -63,7 +63,7 @@
 	max-width: 500px;
 	position: relative;
 	margin: auto;
-	background-color: #555555;
+	background-color: rgba(0, 0, 0, 0);
 }
 
 .slides {
@@ -97,7 +97,7 @@
 .av-thin {
 	width: 90%;
 	color: #ffffff;
-	background-color: #555555;
+	background-color: #555555f0;
 	position: relative;
 	margin: 0 auto !important;
 	height: 100%;
@@ -108,7 +108,7 @@ p,
 h1,
 h2 {
 	color: #ffffff;
-	background-color: #555555;
+	background-color: rgba(0, 0, 0, 0);
 	padding-left: 80px;
 	padding-right: 80px;
 	font-family: Ubuntu;
@@ -116,14 +116,14 @@ h2 {
 }
 
 h3 {
-	background-color: #555555;
+	background-color: rgba(0, 0, 0, 0);
 	font-family: Ubuntu !important;
 	line-height: 1em;
 	margin: 0;
 }
 
 h4 {
-	background-color: #555555;
+	background-color: rgba(0, 0, 0, 0);
 	font-family: Ubuntu !important;
 	line-height: 0.9em;
 	margin: 0;
@@ -140,7 +140,7 @@ a {
 .description {
 	text-align: center;
 	font-family: Ubuntu;
-	background-color: #555555;
+	background-color: rgba(0, 0, 0, 0);
 	color: #ffffff;
 	font-size: 17px;
 }
@@ -153,12 +153,16 @@ a {
 .aeroventures-title {
 	text-align: center;
 	font-size: 40px;
+	background-color: #333333;
+	color: #ffffff;
+	height: 1em;
 }
+
 
 .comic-title {
 	text-align: center;
 	font-size: 30px;
-	background-color: #555555;
+	background-color: rgba(0, 0, 0, 0);
 }
 
 .numbertext {
@@ -177,7 +181,7 @@ a {
 
 .aero-dblue {
 	color: #fff !important;
-	background-color: #3794B3 !important;
+	background-color: #3e456d !important;
 }
 
 .pon-pink {
@@ -491,6 +495,8 @@ body {
 	line-height: 1.5;
 	height: 100%;
 	display: grid;
+	background-image: linear-gradient(180deg, rgba(51, 51, 51, 1) 10%, rgba(0, 0, 0, 0) 25%), url(bg.png);
+	background-size: 10em;
 }
 
 html {
