--- a/index.css
+++ b/index.css
@@ -208,6 +208,11 @@ a {
 	background-color: #7bec37 !important;
 }
 
+.rodney-violet {
+	color: #fff !important;
+	background-color: #9662ef !important;
+}
+
 #menu {
 	position: fixed;
 	right: 0;
