--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 :root {
 	--transparency: 1;
+	--hotbar: 56px;
 }
 
 @font-face {
@@ -111,8 +112,8 @@
 	border-radius: 0 0 1em 1em;
 	padding-bottom: 4px;
 	overflow: hidden;
-	padding-top: 40px;
-	margin-top: 40px !important;
+	padding-top: var(--hotbar);
+	margin-top: var(--hotbar) !important;
 }
 
 p,
@@ -175,6 +176,8 @@ a {
 	text-align: center;
 	font-size: 30px;
 	background-color: rgba(0, 0, 0, 0);
+	line-height: 0;
+	margin-top: -77px;
 }
 
 .numbertext {
@@ -183,7 +186,7 @@ a {
 	padding: 8px 12px;
 	position: absolute;
 	background-color: rgba(0, 0, 0, 0.4);
-	margin-top: -3.2em;
+	margin-top: -4em;
 	border-radius: 1em;
 	border-color: #000000;
 	border-width: 2px;
@@ -197,7 +200,7 @@ a {
 
 .aero-dblue {
 	color: #fff !important;
-	background-color: #666690 !important;
+	background-color: #444 !important;
 }
 
 .pon-pink {
@@ -325,7 +328,8 @@ html {
 }
 
 body {
-	margin: 0
+	margin: 0;
+	background-color: transparent;
 }
 
 article,
@@ -531,13 +535,12 @@ body {
 	font-family: Ubuntu;
 	font-size: 16px;
 	line-height: 1.5;
-	height: 100%;
-	background-image: url(bg.png);
 	background-size: 10em;
 }
 
 html {
-	overflow-x: hidden
+	overflow-x: hidden;
+	background-image: url(bg.png);
 }
 
 h1 {
@@ -907,7 +910,7 @@ a {
 	white-space: normal;
 	display: inline-block;
 	float: none;
-	height: 100%;
+/*	height: 100%;*/
 }
 
 .w3-bar-block .w3-bar-item {
