--- a/index.css
+++ b/index.css
@@ -203,12 +203,12 @@ a {
 
 .rodney-violet {
 	color: #fff !important;
-	background-color: #9662ef !important;
+	background-color: #A951AD !important;
 }
 
 .rodney-violet:hover {
 	color: #fff !important;
-	background-color: #774dc0 !important;
+	background-color: #481A63 !important;
 	transition: 0.3s;
 }
 
