--- a/index.css
+++ b/index.css
@@ -608,18 +608,75 @@ ul {
 	padding-left: 2.5em;
 }
 
-.wiki-gallery {
-	width: 80%;
-	height: 160px;
+.wiki-gallery-parent {
+	width: 60%;
 	margin: 0 auto;
 }
 
+.wiki-gallery {
+	width: 100%;
+	height: 100%;
+	background-color: var(--avthin);
+	white-space: nowrap;
+}
+
 .wiki-slide {
-	height: 150px;
-	margin: 5px auto 0 50%;
+	background-color: var(--background);
+	width: 100%;
+	height: 90%;
+	border: var(--border) solid 1px;
+}
+
+.wiki-slide-text {
+	background-color: var(--background);
+	width: 100%;
+	height: 10%;
+	display: inline-block;
+	border: var(--border) solid 1px;
+	word-wrap: break-word;
+}
+
+.wiki-slide-text * {
+	text-align: center;
+	margin: 0;
+	background-color: transparent;
+	padding: 0 5px 0 5px;
+	white-space: normal;
+}
+
+.wiki-slide-parent {
+	display: inline-block;
+	width: 90%;
+}
+
+.wiki-image {
+	height: 175px;
+	margin: 0px auto 0 50%;
 	transform: translateX(-50%);
 	background-color: transparent;
 }
+
+.wiki-gallery-prev,
+.wiki-gallery-next {
+	background-color: rgba(0, 0, 0, 0.4);
+	display: inline-block;
+	cursor: pointer;
+	width: 5%;
+	border: var(--border) 1px solid;
+	border-radius: 8px 0 0 8px;
+	text-align: center;
+	user-select: none;
+	transition: 0.6s ease;
+}
+
+.wiki-gallery-prev:hover,
+.wiki-gallery-next:hover {
+	background-color: rgba(0, 0, 0, 0.2);
+}
+
+.wiki-gallery-next {
+	border-radius: 0 8px 8px 0;
+};
 
 .aerospin {
 	position: relative;
