--- a/index.css
+++ b/index.css
@@ -611,6 +611,7 @@ ul {
 .wiki-gallery-parent {
 	width: 60%;
 	margin: 0 auto;
+	height: 250px;
 }
 
 .wiki-gallery {
@@ -647,10 +648,11 @@ ul {
 .wiki-slide-parent {
 	display: inline-block;
 	width: 90%;
+	height: 100%;
 }
 
 .wiki-image {
-	height: 175px;
+	height: 95%;
 	margin: 5px auto 5px 50%;
 	transform: translateX(-50%);
 	background-color: transparent;
@@ -667,6 +669,10 @@ ul {
 	text-align: center;
 	user-select: none;
 	transition: 0.6s ease;
+	height: 100%;
+	margin: -228px 0 0 0;
+	vertical-align: middle;
+	padding: 117px 0 0 0;
 }
 
 .wiki-gallery-prev:hover,
