--- a/index.css
+++ b/index.css
@@ -624,26 +624,27 @@ ul {
 .wiki-slide {
 	background-color: var(--background);
 	width: 100%;
-	height: 90%;
+	height: 80%;
 	border: var(--border) solid 1px;
 }
 
 .wiki-slide-text {
 	background-color: var(--background);
 	width: 100%;
-	height: 10%;
+	height: 20%;
 	display: inline-block;
 	border: var(--border) solid 1px;
 	word-wrap: break-word;
-	overflow: auto;
+	overflow: auto scroll;
 }
 
 .wiki-slide-text * {
 	text-align: center;
 	margin: 0;
 	background-color: transparent;
-	padding: 0 5px 0 5px;
+	padding: 0 10px 0 10px;
 	white-space: normal;
+	font-size: 13px;
 }
 
 .wiki-slide-parent {
