--- a/index.css
+++ b/index.css
@@ -267,7 +267,7 @@ a {
 	height: 100%;
 	width: 0;
 	position: fixed;
-	z-index: 1;
+	z-index: 2;
 	top: 0;
 	left: 0;
 	background-color: var(--menus);
@@ -519,12 +519,13 @@ a {
 .comic-fs-overlay {
 	background-color: rgba(0, 0, 0, 0.8);
 	visibility: hidden;
-	height: 100%;
 	width: 100%;
 	z-index: 1;
 	position: fixed;
 	bottom: 0px;
 	left: 0px;
+	top: 0;
+	margin-top: 56px;
 }
 
 .comic-fs-undo {
@@ -538,7 +539,6 @@ a {
 	border-radius: 6px;
 	text-align: center;
 	font-size: 25px;
-	margin-top: 57px;
 	margin-right: 2px;
 	padding-top: 4px;
 	position: absolute;
@@ -553,16 +553,27 @@ a {
 .comic-fs-slide {
 	background-color: transparent;
 	overflow-x: hidden;
+	height: 100%;
+	background-image: none;
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
 }
 
 .comic-fs-panel {
 	background-color: transparent;
 	width: auto;
 	height: auto;
-	margin: 56px auto 0 50%;
+	margin: 0 auto 0 50%;
 	transform: translateX(-50%);
-	max-width: 140vh;
-	max-height: 90vh;
+	max-width: 100%;
+	max-height: 100%;
+	object-fit: cover;
+}
+
+.comic-fs-prev,
+.comic-fs-next {
+	transition: none;
 }
 
 /* The Wiki */
